a few changes done

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <li>
               <i class="lni-calendar"></i>
             </li>
-            <li><span><b>Date & Time</b> 8-9th June, 2023 at 9AM</span></li>
+            <li><span><b>Date & Time</b> 8-9th June, 2023 at 12PM</span></li>
           </ul>
         </div>
 
@@ -293,7 +293,7 @@
             <li>
               <i class="lni-user"></i>
             </li>
-            <li><span><b>Team Size</b>2 to 4 members</span></li>
+            <li><span><b>Team Size</b>3 to 4 members</span></li>
           </ul>
         </div>
         <div class="col-lg-3 col-md-6 col-xs-12">
@@ -444,7 +444,7 @@
               <i class="lni lni-users"></i>
             </div>
             <div class="counter-content">
-              <div class="counterUp">---</div>
+              <div class="counterUp">550</div>
               <p>Participants</p>
             </div>
           </div>
@@ -456,7 +456,7 @@
               <i class="lni lni-handshake"></i>
             </div>
             <div class="counter-content">
-              <div class="counterUp">---</div>
+              <div class="counterUp">200</div>
               <p>Teams</p>
             </div>
           </div>
@@ -468,7 +468,7 @@
               <i class="lni-briefcase"></i>
             </div>
             <div class="counter-content">
-              <div class="counterUp">---</div>
+              <div class="counterUp">80</div>
               <p>Colleges</p>
             </div>
           </div>
@@ -480,7 +480,7 @@
               <i class="lni lni-customer"></i>
             </div>
             <div class="counter-content">
-              <div class="counterUp">---</div>
+              <div class="counterUp">30</div>
               <p>Sponsors</p>
             </div>
           </div>
@@ -551,7 +551,7 @@
                     <div class="card">
                       <div id="headingOne">
                         <div class="schedule-slot-time">
-                          <span> DD/MM/YY</span>
+                          <span> 25/05/23</span>
                           Register
                         </div>
                         <div class="collapsed card-header" data-toggle="collapse" data-target="#collapseOne1"
@@ -565,7 +565,7 @@
                         <div class="card-body">
                           <p>The registration would be simply done by just clicking the register button <a
                               class="register-link">HERE</a> and filling up a google form in which you would have to
-                            mention you and your team details. Registrations end on DD/MM/YY</p>
+                            mention you and your team details. Registrations end on 25/05/23</p>
 
                         </div>
                       </div>
@@ -578,7 +578,7 @@
                     <div class="card">
                       <div id="headingOne1">
                         <div class="schedule-slot-time">
-                          <span> DD/MM/YY</span>
+                          <span> 31/05/23</span>
                           Shortlisting
                         </div>
                         <div class="collapsed card-header" data-toggle="collapse" data-target="#collapseTwo2"
@@ -592,7 +592,7 @@
                         data-parent="#accordion2">
                         <div class="card-body">
                           <p>A shortlisting process would be done from which certain teams would be selected out of the
-                            lot to take part in HackBVP. Shortlisting process begins from DD/MM/YY</p>
+                            lot to take part in HackBVP. Shortlisting process begins from 31/05/23</p>
 
                         </div>
                       </div>
@@ -605,7 +605,7 @@
                     <div class="card">
                       <div id="headingOne3">
                         <div class="schedule-slot-time">
-                          <span>DD/MM/YY</span>
+                          <span>08/06/23</span>
                           Hackathon
                         </div>
                         <div class="collapsed card-header" data-toggle="collapse" data-target="#collapseOne3"
@@ -618,7 +618,7 @@
                       <div id="collapseOne3" class="collapse show" aria-labelledby="headingOne3"
                         data-parent="#accordion3">
                         <div class="card-body">
-                          <p>The Hackathon would begin on DD/MM/YY at TIME and end on DD/MM/YY at TIME.
+                          <p>The Hackathon would begin on 08/06/23 at 12PM and end on 09/06/23 at 12PM.
                             It is a 24hr hackathon where you'd be given various problem statements from various domains
                             for your team to choose from along with mentors guiding you in certain time gaps. For
                             reference <a class="last-yr-ps-link" href="">HERE</a>
@@ -1066,7 +1066,7 @@
 
   <script>
     // Set the date we're counting down to
-    var countDownDate = new Date("Jun 4, 2023 23:59:59").getTime();  //LAST DATE OF REGISTRATION
+    var countDownDate = new Date("May 24, 2023 23:59:59").getTime();  //LAST DATE OF REGISTRATION
 
     // Update the count down every 1 second
     var x = setInterval(function () {
