themes section done

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#domains">
-                Hack Domains
+                Hack Themes
               </a>
             </li>
 
@@ -666,6 +666,9 @@
     </div>
   </section>
   <!-- Schedule Section End -->
+  <div class="maintheme">
+    <img src="assets/img/themebg.png" alt="">
+  </div>
 
   <!-- Blog Section Start -->
   <section id="domains" class="section-padding">
@@ -673,8 +676,13 @@
       <div class="row">
         <div class="col-12">
           <div class="section-title-header text-center">
-            <h2 class="section-title wow fadeInUp" data-wow-delay="0.2s">Hack Domains</h2>
-            <p class="wow fadeInDown" data-wow-delay="0.2s">Problem statements will be based on one of the following
+            <h2 class="section-title wow fadeInUp" data-wow-delay="0.2s"> Sub - Themes</h2>
+            <!-- <div class="maintheme">
+              <p>Problem statements will be based on one of the following
+              domains.</p>
+              <img src="assets/img/themebg.png" alt="">
+            </div> -->
+            <p class="wow fadeInDown" data-wow-delay="0.2s">Problem statements can be solved using following
               domains.
             </p>
           </div>
@@ -683,10 +691,10 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
           <div class="blog-item">
-            <div class="blog-image">
+            <div style="height: 320px;" class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1593720213428-28a5b9e94613?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  src="assets/img/domains/fintech.png"
                   alt="">
               </a>
             </div>
@@ -696,7 +704,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  Web Development
+                  Fintech
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -706,10 +714,10 @@
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
           <div class="blog-item">
-            <div class="blog-image">
+            <div style="height: 320px;" class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  src="assets/img/domains/education.png"
                   alt="">
               </a>
             </div>
@@ -719,7 +727,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  App Developemnt
+                  Education
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -729,10 +737,10 @@
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
           <div class="blog-item">
-            <div class="blog-image">
+            <div style="height: 320px;" class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  src="assets/img/domains/healthcare.png"
                   alt="">
               </a>
             </div>
@@ -742,7 +750,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  AI/ML
+                  Healthcare
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -752,10 +760,10 @@
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
           <div class="blog-item">
-            <div class="blog-image">
+            <div style="height: 320px;" class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1469571486292-0ba58a3f068b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  src="assets/img/domains/infrastructure.png"
                   alt="">
               </a>
             </div>
@@ -765,7 +773,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  Social Cause
+                  Infrastructure
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -774,11 +782,11 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
-          <div class="blog-item">
-            <div class="blog-image">
+          <div  class="blog-item">
+            <div style="height: 320px;" class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1516245834210-c4c142787335?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80"
+                  src="assets/img/domains/transportation.png"
                   alt="">
               </a>
             </div>
@@ -788,7 +796,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  Blockchain
+                  Transportation
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -799,10 +807,10 @@
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
           <div class="blog-item">
-            <div class="blog-image">
+            <div style="height: 320px;" class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1495291916458-c12f594151e7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                  src="assets/img/domains/open.png"
                   alt="">
               </a>
             </div>
