--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#domains">
-                Hack Themes
+                Hack Domains
               </a>
             </li>
 
@@ -100,9 +100,7 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, nobis nesciunt atque perferendis, ipsa doloremque deserunt cum qui.</p> -->
 
               <!-- <img id="hero-image" style="margin-left: auto; margin-right: auto;" src="assets/img//background/logohack.png" width="200px" height="200px" alt=""> -->
-             <video class="mainlandvideo" autoplay src="assets/img/background/landbg.mp4"></video>
-              <!-- <h1 class="banner-info">Build Thè Future<br> <br> <br> with{Hack@BVP}</h1> -->
-              <h1><br> <br> <br> <br></h1>
+              <h1 class="banner-info">Build Thè Future<br> <br> <br> with{Hack@BVP}</h1>
               <div class="banner-btn">
                 <a href="" id="hero-register" class="btn btn-common">Register Now!</a>
                 <!-- <div class="loginbox">
@@ -149,33 +147,7 @@
       </section>
     </div>
     <!-- Hero Area End -->
-    <section id="count1">
-      <div class="count-wrapper text-center">
-        <div class="time-countdown wow fadeInUp" data-wow-delay="0.2s">
-          <div id="clock" class="time-count">
 
-            <div class="count-item-main">
-              <h3 class="count-item" id="count-days1">%d</h3>
-              <h4>Days</h4>
-            </div>
-            <div class="count-item-main">
-              <h3 class="count-item" id="count-hours1">%h</h3>
-              <h4>Hours</h4>
-            </div>
-            <div class="count-item-main">
-              <h3 class="count-item" id="count-mins1">%m</h3>
-              <h4>Minutes</h4>
-            </div>
-            <div class="count-item-main">
-              <h3 class="count-item" id="count-sec1">%s</h3>
-              <h4>Seconds</h4>
-            </div>
-
-          </div>
-
-        </div>
-      </div>
-    </section>
   </header>
   <!-- Header Area wrapper End -->
 
@@ -219,7 +191,6 @@
   <!-- about HACKBVP -->
 
   <section id="about" class="section-padding">
-  
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-12 col-xs-12">
@@ -695,9 +666,6 @@
     </div>
   </section>
   <!-- Schedule Section End -->
-  <div class="maintheme">
-    <img src="assets/img/themebg.png" alt="">
-  </div>
 
   <!-- Blog Section Start -->
   <section id="domains" class="section-padding">
@@ -705,13 +673,8 @@
       <div class="row">
         <div class="col-12">
           <div class="section-title-header text-center">
-            <h2 class="section-title wow fadeInUp" data-wow-delay="0.2s"> Sub - Themes</h2>
-            <!-- <div class="maintheme">
-              <p>Problem statements will be based on one of the following
-              domains.</p>
-              <img src="assets/img/themebg.png" alt="">
-            </div> -->
-            <p class="wow fadeInDown" data-wow-delay="0.2s">Problem statements can be solved using following
+            <h2 class="section-title wow fadeInUp" data-wow-delay="0.2s">Hack Domains</h2>
+            <p class="wow fadeInDown" data-wow-delay="0.2s">Problem statements will be based on one of the following
               domains.
             </p>
           </div>
@@ -720,10 +683,10 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
           <div class="blog-item">
-            <div style="height: 320px;" class="blog-image">
+            <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="assets/img/domains/fintech.png"
+                  src="https://images.unsplash.com/photo-1593720213428-28a5b9e94613?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
                   alt="">
               </a>
             </div>
@@ -733,7 +696,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  Fintech
+                  Web Development
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -743,10 +706,10 @@
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
           <div class="blog-item">
-            <div style="height: 320px;" class="blog-image">
+            <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="assets/img/domains/education.png"
+                  src="https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
                   alt="">
               </a>
             </div>
@@ -756,7 +719,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  Education
+                  App Developemnt
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -766,10 +729,10 @@
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
           <div class="blog-item">
-            <div style="height: 320px;" class="blog-image">
+            <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="assets/img/domains/healthcare.png"
+                  src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
                   alt="">
               </a>
             </div>
@@ -779,7 +742,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  Healthcare
+                  AI/ML
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -789,10 +752,10 @@
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
           <div class="blog-item">
-            <div style="height: 320px;" class="blog-image">
+            <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="assets/img/domains/infrastructure.png"
+                  src="https://images.unsplash.com/photo-1469571486292-0ba58a3f068b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
                   alt="">
               </a>
             </div>
@@ -802,7 +765,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  Infrastructure
+                  Social Cause
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -811,11 +774,11 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
-          <div  class="blog-item">
-            <div style="height: 320px;" class="blog-image">
+          <div class="blog-item">
+            <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="assets/img/domains/transportation.png"
+                  src="https://images.unsplash.com/photo-1516245834210-c4c142787335?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80"
                   alt="">
               </a>
             </div>
@@ -825,7 +788,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  Transportation
+                  Blockchain
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -836,10 +799,10 @@
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s">
           <div class="blog-item">
-            <div style="height: 320px;" class="blog-image">
+            <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="assets/img/domains/open.png"
+                  src="https://images.unsplash.com/photo-1495291916458-c12f594151e7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
                   alt="">
               </a>
             </div>
@@ -1125,38 +1088,6 @@
       document.getElementById("count-hours").innerHTML = ('0' + hours).substr(-2);
       document.getElementById("count-mins").innerHTML = ('0' + minutes).substr(-2);
       document.getElementById("count-sec").innerHTML = ('0' + seconds).substr(-2);
-
-      // If the count down is finished, write some text
-      if (distance < 0) {
-        clearInterval(x);
-        document.getElementById("clock").innerHTML = "EXPIRED";
-      }
-    }, 1000);
-  </script>
-  <script>
-    // Set the date we're counting down to
-    var countDownDate = new Date("May 24, 2023 23:59:59").getTime();  //LAST DATE OF REGISTRATION
-
-    // Update the count down every 1 second
-    var x = setInterval(function () {
-
-      // Get today's date and time
-      var now = new Date().getTime();
-
-      // Find the distance between now and the count down date
-      var distance = countDownDate - now;
-
-      // Time calculations for days, hours, minutes and seconds
-      var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-      var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-      var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-      var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-      // Display the result in the element with id="demo"
-      document.getElementById("count-days1").innerHTML = ('0' + days).substr(-2);
-      document.getElementById("count-hours1").innerHTML = ('0' + hours).substr(-2);
-      document.getElementById("count-mins1").innerHTML = ('0' + minutes).substr(-2);
-      document.getElementById("count-sec1").innerHTML = ('0' + seconds).substr(-2);
 
       // If the count down is finished, write some text
       if (distance < 0) {
