original website restored , added about cllg and some changes

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <!-- Count Bar End -->
 
   <!-- //                                                                   ABOUT BVCOE  -->
-  <!-- 
+
   <section id="about" class="section-padding">
     <div class="container">
       <div class="row">
@@ -164,7 +164,7 @@
 
 
           <div class="img-thumb">
-            <img style="border-radius: 50%; " class="img-fluid" src="assets/img/logo3.jpeg" alt="">
+            <img style="border-radius: 10%; " class="img-fluid" src="assets/img/BVCOE.jpg" alt="">
           </div>
         </div>
 
@@ -174,18 +174,27 @@
             <div>
               <div class="about-text">
                 <h2>About BVCOE , Delhi</h2>
-                <p>Bharati Vidyapeeth's College of Engineering, New Delhi, since its establishment in 1999, has strived
+                <!-- <p>Bharati Vidyapeeth's College of Engineering, New Delhi, since its establishment in 1999, has strived
                   to provide the best engineering education to its students through well-qualified and dedicated faculty
                   and the provision of well-equipped modern labs. BVCOE is an institute of excellence that provides
                   quality technical education and research to create competent graduates for serving industry and
-                  society.</p>
+                  society.</p> -->
+                <p>Bharati Vidyapeeth' s College of Engineering, New
+                  Delhi, since its establishment in 1999, has strived to
+                  provide the best engineering education to its students
+                  through well-qualified and dedicated faculty and the
+                  provision of well-equipped modern labs.
+                  BVCOE is an institute of excellence that provides
+                  quality technical education and research to create
+                  competent graduates for serving industry and society.
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- About Section Start -->
   <!-- about HACKBVP -->
@@ -207,27 +216,19 @@
             <div>
               <div class="about-text">
                 <h2>About The Hackathon</h2>
-                <!-- <p>Hack@BVP is the flagship event of the Department of Computer Science & Engineering and its mission is
-                  to provide a thrilling experience to students, developers, and anyone interested in coding. ABOUT
-                  HACK@BVP Over the course of its four successful seasons, Hack@Bvp has consistently garnered an
-                  overwhelmingly positive response from numerous colleges across Delhi and NCR. The event has witnessed
-                  a significant number of registrations and a plethora of innovative ideas from young enthusiasts
-                  pertaining to diverse planned themes and problem statements based on day-to-day challenges.</p> -->
-                <!-- <p>Hack@BVP is the flagship event of the Department of Computer Science & Engineering that provides a
-                  platform for students, developers, and coding enthusiasts to showcase their creativity and
-                  problem-solving skills. With a focus on inventing innovative solutions, creating cutting-edge
-                  projects, expanding networks, and perfecting pitching skills, participants have the opportunity to
-                  score some serious moolah in the form of prizes . Over the past four seasons, Hack@BVP has received a
-                  overwhelming response from colleges across Delhi and NCR with a significant number of registrations
-                  and innovative ideas. Join in and unleash your potential!</p> -->
-                <!-- <p>Hack@BVP is the Department of Computer Science & Engineering's flagship event, aimed at providing an exciting coding experience to students, developers, and coding enthusiasts.
-                    Hack@BVP has had four successful seasons, receiving an overwhelmingly positive response from various colleges in Delhi and NCR. The event has seen numerous registrations and innovative ideas from young enthusiasts tackling daily challenges based on diverse themes and problem statements.
-                    We take great pleasure in formally announcing that following the resounding success of its previous editions, we are proud to present "HACK@BVP 5.0"</p> -->
-                <p>Get ready to dive into the world of coding with Hack@BVP, the flagship event of the Department of
+                <!-- <p>Get ready to dive into the world of coding with Hack@BVP, the flagship event of the Department of
                   Computer Science & Engineering, designed to give coding enthusiasts an unforgettable experience! We
                   have received overwhelming responses and have seen an array of talented coders come up with innovative
                   solutions to real-world problems.
-                  We look forward to yet another thrilling experience with the "HACK@BVP 5.0"</p>
+                  We look forward to yet another thrilling experience with the "HACK@BVP 5.0"</p> -->
+                <p>The Department of Computer Science & Engineering hosts Hack@BVP, which aims to provide an exciting
+                  coding experience for students, developers, and coding enthusiasts. With four successful seasons under
+                  its belt, Hack@BVP has received positive feedback from many colleges in Delhi and the NCR region. The
+                  event has attracted numerous registrations and innovative ideas from young enthusiasts based on
+                  various themes and real-world challenges. We are delighted to announce <span style="color: #0099ff;">
+                    "HACK@BVP 5.0"</span>,
+                  the Fifth Edition of Hack@BVP, a 24-hour offline hackathon scheduled to take place on June 8th and
+                  9th, 2023, following the success of its previous editions.</p>
               </div>
               <!-- <ul class="stylish-list mb-3 hackathon_list">
                 <li><i style="color:turquoise;" class="lni-check-mark-circle"></i>Invent: Unleash your creativity and
