--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <nav class="navbar navbar-expand-lg bg-inverse fixed-top scrolling-navbar">
       <div id="nav-container" class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <a href="https://bvcoend.ac.in/" target="_blank" class="navbar-brand"><img id="nav-logo"
-            src="assets/img/bvpnew.png" alt=""></a>
+        <a href="https://bvcoend.ac.in/" target="_blank" class="navbar-brand">
+          <img id="nav-logo" src="assets/img/bvpnew.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <i class="lni-menu"></i>
@@ -155,14 +155,12 @@
 
   <!-- Count Bar End -->
 
-  <!-- //                                                                   ABOUT BVCOE  -->
+  <!-- //ABOUT BVCOE  -->
 
   <section id="about" class="section-padding">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-12 col-xs-12">
-
-
           <div class="img-thumb">
             <img style="border-radius: 10%; " class="img-fluid" src="assets/img/BVCOE.jpg" alt="">
           </div>
