add theme section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#domains">
-                Hack Domains
+                Hack Theme
               </a>
             </li>
 
@@ -665,6 +665,7 @@
     </div>
   </section>
   <!-- Schedule Section End -->
+  <img class="mainthemeimg" style="width: 100%;" src="assets/img/themebg.png" alt="">
 
   <!-- Blog Section Start -->
   <section id="domains" class="section-padding">
@@ -672,7 +673,7 @@
       <div class="row">
         <div class="col-12">
           <div class="section-title-header text-center">
-            <h2 class="section-title wow fadeInUp" data-wow-delay="0.2s">Hack Domains</h2>
+            <h2 class="section-title wow fadeInUp" data-wow-delay="0.2s">Sub - Domains</h2>
             <p class="wow fadeInDown" data-wow-delay="0.2s">Problem statements will be based on one of the following
               domains.
             </p>
@@ -685,7 +686,7 @@
             <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1593720213428-28a5b9e94613?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  src="assets/img/domains/infrastructure.png"
                   alt="">
               </a>
             </div>
@@ -695,7 +696,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  Web Development
+                  Infrastructure
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -708,7 +709,7 @@
             <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  src="assets/img/domains/transportation.png"
                   alt="">
               </a>
             </div>
@@ -718,7 +719,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  App Developemnt
+                  Transportation
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -731,7 +732,7 @@
             <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  src="assets/img/domains/education.png"
                   alt="">
               </a>
             </div>
@@ -741,7 +742,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  AI/ML
+                  Education
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -754,7 +755,7 @@
             <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1469571486292-0ba58a3f068b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  src="assets/img/domains/fintech.png"
                   alt="">
               </a>
             </div>
@@ -764,7 +765,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  Social Cause
+                  Fintech
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -777,7 +778,7 @@
             <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1516245834210-c4c142787335?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80"
+                  src="assets/img/domains/healthcare.png"
                   alt="">
               </a>
             </div>
@@ -787,7 +788,7 @@
               </div>
               <h3 class="title">
                 <a>
-                  Blockchain
+                  Healthcare
                 </a>
               </h3>
               <p class="hack-desc">Lorem ipsum dolor sit amet, consectetur adipsing elit, sed do eiusmodincididunt ut
@@ -801,7 +802,7 @@
             <div class="blog-image">
               <a>
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1495291916458-c12f594151e7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                  src="assets/img/domains/open.png"
                   alt="">
               </a>
             </div>
