themes and sub themes setted

--- a/index.html
+++ b/index.html
@@ -673,9 +673,9 @@
       <div class="row">
         <div class="col-12">
           <div class="section-title-header text-center">
-            <h2 class="section-title wow fadeInUp" data-wow-delay="0.2s">Sub - Domains</h2>
+            <h2 class="section-title wow fadeInUp" data-wow-delay="0.2s">Sub - Themes</h2>
             <p class="wow fadeInDown" data-wow-delay="0.2s">Problem statements will be based on one of the following
-              domains.
+              Sub-Themes.
             </p>
           </div>
         </div>
@@ -685,9 +685,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid"
-                  src="assets/img/domains/infrastructure.png"
-                  alt="">
+                <img class="img-fluid" src="assets/img/domains/Infrastructure.png" alt="">
               </a>
             </div>
             <div class="descr">
@@ -708,9 +706,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid"
-                  src="assets/img/domains/transportation.png"
-                  alt="">
+                <img class="img-fluid" src="assets/img/domains/transportation.png" alt="">
               </a>
             </div>
             <div class="descr">
@@ -731,9 +727,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid"
-                  src="assets/img/domains/education.png"
-                  alt="">
+                <img class="img-fluid" src="assets/img/domains/education.jpeg" alt="">
               </a>
             </div>
             <div class="descr">
@@ -754,9 +748,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid"
-                  src="assets/img/domains/fintech.png"
-                  alt="">
+                <img class="img-fluid" src="assets/img/domains/fintech.png" alt="">
               </a>
             </div>
             <div class="descr">
@@ -777,9 +769,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid"
-                  src="assets/img/domains/healthcare.png"
-                  alt="">
+                <img class="img-fluid" src="assets/img/domains/health.png" alt="">
               </a>
             </div>
             <div class="descr">
@@ -801,9 +791,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid"
-                  src="assets/img/domains/open.png"
-                  alt="">
+                <img class="img-fluid" src="assets/img/domains/open.png" alt="">
               </a>
             </div>
             <div class="descr">
