themes and sub themes setted

--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid" src="assets/img/domains/Infrastructuree.png" alt="">
+                <!-- <img class="img-fluid" src="assets/img/domains/Infrastructuree.png" alt=""> -->
               </a>
             </div>
             <div class="descr">
@@ -706,7 +706,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid" src="assets/img/domains/transportation.png" alt="">
+                <!-- <img class="img-fluid" src="assets/img/domains/transportation.png" alt=""> -->
               </a>
             </div>
             <div class="descr">
@@ -727,7 +727,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid" src="assets/img/domains/education.jpeg" alt="">
+                <!-- <img class="img-fluid" src="assets/img/domains/education.jpeg" alt=""> -->
               </a>
             </div>
             <div class="descr">
@@ -748,7 +748,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid" src="assets/img/domains/fintech.png" alt="">
+                <!-- <img class="img-fluid" src="assets/img/domains/fintech.png" alt=""> -->
               </a>
             </div>
             <div class="descr">
@@ -769,7 +769,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid" src="assets/img/domains/healthh.png" alt="">
+                <!-- <img class="img-fluid" src="assets/img/domains/healthh.png" alt=""> -->
               </a>
             </div>
             <div class="descr">
@@ -791,7 +791,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid" src="assets/img/domains/open.png" alt="">
+                <!-- <img class="img-fluid" src="assets/img/domains/open.png" alt=""> -->
               </a>
             </div>
             <div class="descr">
