college logo resize

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <nav class="navbar navbar-expand-lg bg-inverse fixed-top scrolling-navbar">
       <div id="nav-container" class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <a href="https://bvcoend.ac.in/" target="_blank" class="navbar-brand">
-          <img id="nav-logo" src="assets/img/bvpnew.png" alt=""></a>
+        <a href="https://bvcoend.ac.in/" target="_blank"  class="navbar-brand">
+          <img id="nav-logo" src="assets/img/bvpnew.png" style="width: 250px; height: 130px; margin-left: -60px;" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <i class="lni-menu"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto w-100 justify-content-end">
+          <ul class="navbar-nav mr-auto w-100 justify-content-end" style="margin-right: -100px;">
             <li class="nav-item active">
               <a class="nav-link" href="#header-wrap">
                 Home
@@ -685,7 +685,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <!-- <img class="img-fluid" src="assets/img/domains/Infrastructuree.png" alt=""> -->
+                <img class="img-fluid" src="assets/img/domains/Infrastructuree.png" alt="">
               </a>
             </div>
             <div class="descr">
@@ -706,7 +706,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <!-- <img class="img-fluid" src="assets/img/domains/transportation.png" alt=""> -->
+                <img class="img-fluid" src="assets/img/domains/transportation.png" alt="">
               </a>
             </div>
             <div class="descr">
@@ -727,7 +727,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <!-- <img class="img-fluid" src="assets/img/domains/education.jpeg" alt=""> -->
+                <img class="img-fluid" src="assets/img/domains/education.jpeg" alt="">
               </a>
             </div>
             <div class="descr">
@@ -748,7 +748,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <!-- <img class="img-fluid" src="assets/img/domains/fintech.png" alt=""> -->
+                <img class="img-fluid" src="assets/img/domains/fintech.png" alt="">
               </a>
             </div>
             <div class="descr">
@@ -769,7 +769,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <!-- <img class="img-fluid" src="assets/img/domains/healthh.png" alt=""> -->
+                <img class="img-fluid" src="assets/img/domains/healthh.png" alt="">
               </a>
             </div>
             <div class="descr">
@@ -791,7 +791,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <!-- <img class="img-fluid" src="assets/img/domains/open.png" alt=""> -->
+                <img class="img-fluid" src="assets/img/domains/open.png" alt="">
               </a>
             </div>
             <div class="descr">
