--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
           <div class="blog-item">
             <div class="blog-image">
               <a>
-                <img class="img-fluid" src="assets/img/domains/healthh.png" alt="">
+                <img class="img-fluid" src="assets/img/domains/healthhh.jpg" alt="">
               </a>
             </div>
             <div class="descr">
